--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>git practice</h1>
+    <h1>git practice</h1>
+    <h1>git practice</h1>
+    <h1>git practice</h1>
+    <h1>git practice</h1>
+    <h1>git practice</h1>
 </body>
 </html>
